Renamed Blog files to naturally sort YYYY-MM-DD

--- a/about-me.html
+++ b/about-me.html
@@ -203,6 +203,11 @@
                                         <span class="nav-link-name">work</span>
                                     </a>
                                 </li>
+                                <li class="nav-item">
+                                    <a href="my-blog.html" class="nav-link">
+                                        <span class="nav-link-name">blog</span>
+                                    </a>
+                                </li>
                             </ul>
                         </div>
                     </li>
@@ -351,6 +356,11 @@
                                             <li class="nav-item">
                                                 <a href="project-microcode.html" class="nav-link">
                                                     <span class="nav-link-name">work</span>
+                                                </a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a href="my-blog.html" class="nav-link">
+                                                    <span class="nav-link-name">blog</span>
                                                 </a>
                                             </li>
                                         </ul>
@@ -521,8 +531,8 @@
                             <div class="tab-pane" id="profile" role="tabpanel" aria-labelledby="profile-tab">
                                 <p class="mb-30">Hello! </p>
                                 <p class="mb-30">I'm Tim McGuire, founder of MicroCODE Incorporated. I love to race sailboats, cycle, ski, and scuba dive for fun. Time constraints and life have pretty much reduced that to sailboat racing, which I’ll give up when I die!</p>
-                                <p class="mb-30">I started MicroCODE in 1987 as a side-git and took it full time in 1990 with the help of my partner Terry Minnis. (She owns two other successful publishing businesses as well). I’ve been a software developer since 1982, first as a Controls Engineer writing Relay Ladder Diagram code, then as an Assembly Language programmer on DEC PDP-11s and VAX computers in the late 1980s and early 1990s. I moved to C in the late 1990s, then added Visual Basic (for Excel Tools), and HTML for our own website. Eventually moving to my favorite language—C#--in the mid-2000s.</p>
-                                <p class="mb-30">Now I want to ‘Digitally Transform’ MicroCODE (as they say at MIT) into a web services company and bring our legacy products—like LADDERS®--back to the world through the browser. So, I enrolled in the MIT xPRO: Full Stack Development course in 2021 and there is no looking back!</p>
+                                <p class="mb-30">I started MicroCODE in 1987 as a side-gig and took it full time in 1990 with the help of my partner Terry Minnis. (She owns two other successful publishing businesses as well). I’ve been a software developer since 1982, first as a Controls Engineer writing Relay Ladder Diagram code, then as an Assembly Language programmer on DEC PDP-11s and VAX computers in the late 1980s and early 1990s. I moved to C in the late 1990s, then added Visual Basic (for Excel Tools), and HTML for our own website. Eventually moving to my favorite language—C#--in the mid-2000s.</p>
+                                <p class="mb-30">Now I want to ‘Digitally Transform’ MicroCODE (as they say at MIT) into a web services company and bring our legacy products—like LADDERS®—back to the world through the browser. So, I enrolled in the MIT xPRO: Full Stack Development course in 2021 and there is no looking back!</p>
                                 <p class="mb-30">My GitHub name is '<b>tjmcode</b>' if you're looking for me there. There are direct links to my GitHub, YouTube, Facebook, Twitter, and LinkedIn pages in the social icons shown thru-out the Portfolio.</p>
                                 <p class="mb-30">To balance this all out my wife Cathy and I race our brand-new J/112e as much as possible, most recently winning our Class in the Bayview Yacht Club Port Huron to Mackinac Race in 2021 with the help of family and great friends!</p>
                                 <p class="mb-30">The answer to your question, 'What is that weird image behind you?'... that is a 'Blockie' or 'Identicon', which is an ecryption of my personal identification.</p>
@@ -579,7 +589,7 @@
                                 </button>
                                 <div id="collapseBooks" class="collapse" data-parent="#accordionAbout">
                                     <div class="collapse-content">
-                                        <p class="mb-0 font-size-16">You can learn anything from a good book. They give you access to the experts in any field, time with the people who spend their lives learning something that they passed it on... if you read.</p>
+                                        <p class="mb-0 font-size-16">You can learn anything from a good book. They give you access to the experts in any field, time with the people who spent their lives learning something, and then they passed it on... if you read.</p>
                                     </div>
                                 </div>
                             </div>
