--- a/blog-2021-11-03.html
+++ b/blog-2021-11-03.html
@@ -66,7 +66,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>tjmcode | 18-SEP-2020</title>
+        <title>tjmcode | 03-NOV-2021</title>
         <meta name="My Portfolio" content="Timothy McGuire">
         <meta name="Timothy McGuire" content="Portfolio">
         <!-- Browser Tab Icon -->
@@ -201,6 +201,11 @@
                                 <li class="nav-item">
                                     <a href="project-microcode.html" class="nav-link">
                                         <span class="nav-link-name">work</span>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="my-blog.html" class="nav-link">
+                                        <span class="nav-link-name">blog</span>
                                     </a>
                                 </li>
                             </ul>
@@ -353,6 +358,11 @@
                                                     <span class="nav-link-name">work</span>
                                                 </a>
                                             </li>
+                                            <li class="nav-item">
+                                                <a href="my-blog.html" class="nav-link">
+                                                    <span class="nav-link-name">blog</span>
+                                                </a>
+                                            </li>
                                         </ul>
                                     </div>
                                 </li>
@@ -483,52 +493,52 @@
             <div class="container">
                 <div class="row justify-content-center text-center pt-60 pb-130 mt-30">
                     <div class="col-12 col-lg-8">
-                        <div class="subtitle show-on-scroll" data-show-duration="500" data-show-distance="10" data-show-delay="150">business - 19 sept, 2020</div>
-                        <h1 class="h2 mb-n10 show-on-scroll" data-show-duration="500" data-show-distance="10">Goodbye to Rockwell Automation!</h1>
+                        <div class="subtitle show-on-scroll" data-show-duration="500" data-show-distance="10" data-show-delay="150">family - 03 nov, 2021</div>
+                        <h1 class="h2 mb-n10 show-on-scroll" data-show-duration="500" data-show-distance="10">Benjamin Carter Medlyn is born!</h1>
                     </div>
                 </div>
-                <img class="w-100 mb-100 show-on-scroll" src="assets/images/blog/18-sep-2020-ken-me.jpg" alt="" data-show-duration="800">
+                <img class="w-100 mb-100 show-on-scroll" src="assets/images/blog/2021-11-03-adam-nikki-chad-ben.jpg" alt="" data-show-duration="800">
                 <div class="row justify-content-center gh-1 mb-100">
                     <div class="col-lg-8 post-content">
-                        <p class="lead fw-medium">After over 30 years with Rockwell Automation Ken Welch retires.</p>
-                        <p>Ken and I have worked together on General Motors error proofing systems for almost 24 years. Ken is one of the nicest, hardest working men I know and I'm glad to have had the opportunity to work with him these last two decades. </p>
-                        <p>MicroCODE is extremely happy that Ken is still working part-time and choose to partner with us after leaving Rockwell Automation.</p>
+                        <p class="lead fw-medium">A miracle baby.</p>
+                        <p>Ben wasn't supposed to arrive until the end of December but Nikki's water broke the first night she arrived in Dallas for her brother Adam's wedding! </p>
+                        <p>...</p>
                     </div>
                 </div>
                 <div class="row gh-1 gv-1 mb-100">
                     <div class="col-12 col-sm-6 show-on-scroll" data-show-duration="500" data-show-delay="50">
-                        <a href="assets/images/blog/18-sep-2020-covid-party.jpg" class="gallery-item gallery-item-lg" data-fancybox="gallery-1" data-animation-effect="fade">
-                            <img src="assets/images/blog/18-sep-2020-covid-party.jpg" alt="">
+                        <a href="assets/images/blog/2021-11-03-.jpg" class="gallery-item gallery-item-lg" data-fancybox="gallery-1" data-animation-effect="fade">
+                            <img src="assets/images/blog/2021-11-03-.jpg" alt="">
                         </a>
                     </div>
                     <div class="col-12 col-sm-6 show-on-scroll" data-show-duration="500" data-show-delay="150">
-                        <a href="assets/images/blog/18-sep-2020-ken-jim-matt.jpg" class="gallery-item gallery-item-lg" data-fancybox="gallery-1" data-animation-effect="fade">
-                            <img src="assets/images/blog/18-sep-2020-ken-jim-matt.jpg" alt="">
+                        <a href="assets/images/blog/2021-11-03-.jpg" class="gallery-item gallery-item-lg" data-fancybox="gallery-1" data-animation-effect="fade">
+                            <img src="assets/images/blog/2021-11-03-.jpg" alt="">
                         </a>
                     </div>
                 </div>
                 <div class="row justify-content-center gh-1 mb-100">
                     <div class="col-lg-8 post-content">
-                        <h3>COSS, GEP, and SEP.</h3>
-                        <p>Three different generations of General Motors error proofing, installed in over 30 Plants world-wide. All based on the the original design and code started in December 1998. </p>
-                        <h4>Six month project?</h4>
-                        <p>We were initially told that the GM Common Operator Support System (COSS) would be a six month project. But Harry Valdez--a Rockwell Project Manager--told us we'd stop working on error-proofing when we walked away from it, he was right, but we still haven't walked away from it yet! </p>
+                        <h3>Benjamin Carter Medlyn</h3>
+                        <p>... </p>
+                        <h4>November 03, 2021 11:03 AM - 3 lb 11 oz (11/3/11/3/3/11)</h4>
+                        <p>...
                     </div>
                 </div>
                 <div class="row gh-1 gv-1 mb-100">
                     <div class="col-12 col-sm-6 col-md-4 show-on-scroll" data-show-duration="500" data-show-delay="50">
-                        <a href="assets/images/blog/18-sep-2020-ken-abdou.jpg" class="gallery-item gallery-item-lg" data-fancybox="gallery-2" data-animation-effect="fade">
-                            <img src="assets/images/blog/18-sep-2020-ken-abdou.jpg" alt="">
+                        <a href="assets/images/blog/2021-11-03-.jpg" class="gallery-item gallery-item-lg" data-fancybox="gallery-2" data-animation-effect="fade">
+                            <img src="assets/images/blog/2021-11-03-.jpg" alt="">
                         </a>
                     </div>
                     <div class="col-12 col-sm-6 col-md-4 show-on-scroll" data-show-duration="500" data-show-delay="250">
-                        <a href="assets/images/blog/18-sep-2020-open-air-unmasked.jpg" class="gallery-item gallery-item-lg" data-fancybox="gallery-2" data-animation-effect="fade">
-                            <img src="assets/images/blog/18-sep-2020-open-air-unmasked.jpg" alt="">
+                        <a href="assets/images/blog/2021-11-03-wedding-.jpg" class="gallery-item gallery-item-lg" data-fancybox="gallery-2" data-animation-effect="fade">
+                            <img src="assets/images/blog/2021-11-03-wedding-.jpg" alt="">
                         </a>
                     </div>
                     <div class="col-12 col-sm-6 col-md-4 show-on-scroll" data-show-duration="500" data-show-delay="150">
-                        <a href="assets/images/blog/18-sep-2020-covid-doug.jpg" class="gallery-item gallery-item-lg" data-fancybox="gallery-2" data-animation-effect="fade">
-                            <img src="assets/images/blog/18-sep-2020-covid-doug.jpg" alt="">
+                        <a href="assets/images/blog/2021-11-03-.jpg" class="gallery-item gallery-item-lg" data-fancybox="gallery-2" data-animation-effect="fade">
+                            <img src="assets/images/blog/2021-11-03-.jpg" alt="">
                         </a>
                     </div>
                 </div>
@@ -537,13 +547,13 @@
                         <svg class="mb-30" width="38" height="24" viewBox="0 0 38 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M0 24L10.1466 0H18.801L13.4293 24H0ZM19.199 24L29.3455 0H38L32.5288 24H19.199Z" fill="currentColor" />
                         </svg>
-                        <blockquote class="mt-6 mb-100">24 years, 30+ GM Plants, 3 dfferents generations of error proofing, its been a hell of a '6-month project' Ken!</blockquote>
+                        <blockquote class="mt-6 mb-100">Congratulations to Nikki, Chad and Calvin!</blockquote>
                     </div>
                     <div class="col-12 col-lg-8">
                         <hr class="mt-n10 mb-30">
                         <div class="row gh-2 gv-1 justify-content-between">
                             <div class="col-auto">
-                                <span class="fw-medium me-8">Tags:</span> <a href="#">rockwell</a>, <a href="#">gm</a>, <a href="#">COSS-GEP-SEP</a>
+                                <span class="fw-medium me-8">Tags:</span> <a href="#">family</a>, <a href="#">dallas</a>, <a href="#">baby</a>
                             </div>
                             <div class="col-auto">
                                 <span class="fw-medium">Share:</span>
@@ -577,13 +587,13 @@
                 <h2 class="text-center mt-130 pb-30 mb-60">Related posts</h2>
                 <div class="row gh-1 gv-1 mb-n8">
                     <div class="col-12 col-md-6 col-lg-4 show-on-scroll" data-show-duration="600" data-show-distance="20" data-show-delay="50">
-                        <a class="card card-blog card-vertical" href="blog-18-sep-2020.html">
+                        <a class="card card-blog card-vertical" href="blog-2021-10-31.html">
                             <span class="card-img">
-                                <img src="assets/images/blog/18-sep-2020-kens-retirement.jpg" alt="">
+                                <img src="assets/images/blog/2021-10-31-adam-anna-wedding-party.jpg" alt="">
                             </span>
                             <span class="card-body">
-                                <span class="card-title h5">23+ years, 30+ Plants</span>
-                                <span class="card-date">18 sept, 2020</span>
+                                <span class="card-title h5">Adam and Annalee get Married!</span>
+                                <span class="card-date">31 oct, 2021</span>
                             </span>
                         </a>
                     </div>
