--- a/my-blog.html
+++ b/my-blog.html
@@ -179,7 +179,7 @@
                     <span></span>
                 </a>
                 <ul class="nav navbar-nav">
-                    <li class="nav-item navbar-dropdown">
+                    <li class="nav-item navbar-dropdown active">
                         <a href="about-me.html" class="nav-link">
                             <span class="nav-link-name">me</span>
                             <svg width="6" height="10" viewBox="0 0 6 10" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -201,6 +201,11 @@
                                 <li class="nav-item">
                                     <a href="project-microcode.html" class="nav-link">
                                         <span class="nav-link-name">work</span>
+                                    </a>
+                                </li>
+                                <li class="nav-item active">
+                                    <a href="my-blog.html" class="nav-link">
+                                        <span class="nav-link-name">blog</span>
                                     </a>
                                 </li>
                             </ul>
@@ -329,7 +334,7 @@
                     <div class="col-12 col-md-7 col-lg-5 col-xl-4">
                         <div class="navbar-body">
                             <ul class="nav navbar-nav navbar-nav-collapse">
-                                <li class="nav-item navbar-collapse">
+                                <li class="nav-item navbar-collapse active">
                                     <a href="#navbarCollapseMe" class="nav-link collapsed" role="button" data-bs-toggle="collapse" aria-expanded="false" aria-controls="navbarCollapseMe">
                                         <span class="nav-link-name">me</span>
                                         <svg class="collapse-icon" width="7" height="12" viewBox="0 0 7 12" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -351,6 +356,11 @@
                                             <li class="nav-item">
                                                 <a href="project-microcode.html" class="nav-link">
                                                     <span class="nav-link-name">work</span>
+                                                </a>
+                                            </li>
+                                            <li class="nav-item active">
+                                                <a href="my-blog.html" class="nav-link">
+                                                    <span class="nav-link-name">blog</span>
                                                 </a>
                                             </li>
                                         </ul>
@@ -487,7 +497,7 @@
                             <div class="swiper-slide overflow-hidden">
                                 <div class="card card-overlay card-blog card-image-sm card-hover-zoom text-center text-white">
                                     <div class="card-img" data-swiper-parallax-x="20%" class="swiper-image">
-                                        <img src="assets/images/blog/25-jul-2021-finish-line.jpg" alt="">
+                                        <img src="assets/images/blog/2021-07-25-finish-line.jpg" alt="">
                                         <div class="background-color" style="background-color: rgba(14, 14, 14, .4);"></div>
                                     </div>
                                     <div class="card-img-overlay">
@@ -495,7 +505,7 @@
                                             <div class="col-12 col-lg-7">
                                                 <div class="subtitle mt-lg-3 mb-30 show-on-scroll" data-show-duration="500" data-show-delay="200" data-show-distance="10">sailing - 25 july, 2021</div>
                                                 <h2 class="card-title h3-sm mb-0 show-on-scroll" data-show-duration="500" data-show-delay="100" data-show-distance="10">My best day racing</h2>
-                                                <a href="blog-25-jul-2021.html" class="btn btn-clean mt-30 mt-lg-60 mt-xl-130 mb-xl-n30 show-on-scroll" data-show-duration="500" data-show-delay="200" data-show-distance="10">read more<svg class="icon-arrow icon-arrow-right" width='26' height='11' viewBox='0 0 26 11' fill='none' xmlns='http://www.w3.org/2000/svg'>
+                                                <a href="blog-2021-07-25.html" class="btn btn-clean mt-30 mt-lg-60 mt-xl-130 mb-xl-n30 show-on-scroll" data-show-duration="500" data-show-delay="200" data-show-distance="10">read more<svg class="icon-arrow icon-arrow-right" width='26' height='11' viewBox='0 0 26 11' fill='none' xmlns='http://www.w3.org/2000/svg'>
                                                         <path d='M20.5 1L25 5.5L20.5 10' stroke='currentColor' stroke-width='1.3' stroke-linecap='round' stroke-linejoin='round' />
                                                         <path d='M7 5.5H25' stroke='currentColor' stroke-width='1.3' stroke-linecap='round' stroke-linejoin='round' />
                                                     </svg></a>
@@ -507,7 +517,7 @@
                             <div class="swiper-slide overflow-hidden">
                                 <div class="card card-overlay card-blog card-image-sm card-hover-zoom text-center text-white">
                                     <div class="card-img" data-swiper-parallax-x="20%" class="swiper-image">
-                                        <img src="assets/images/blog/18-sep-2020-kens-retirement.jpg" alt="">
+                                        <img src="assets/images/blog/2020-09-18-kens-retirement.jpg" alt="">
                                         <div class="background-color" style="background-color: rgba(14, 14, 14, .2);"></div>
                                     </div>
                                     <div class="card-img-overlay">
@@ -515,7 +525,7 @@
                                             <div class="col-12 col-lg-7">
                                                 <div class="subtitle mt-lg-3 mb-30">company - 01 sep, 2020</div>
                                                 <h2 class="card-title h3-sm mb-0">Ken Welch Rockwell Retirement</h2>
-                                                <a href="blog-18-sep-2020.html" class="btn btn-clean mt-30 mt-lg-60 mt-xl-130 mb-xl-n30">read more<svg class="icon-arrow icon-arrow-right" width='26' height='11' viewBox='0 0 26 11' fill='none' xmlns='http://www.w3.org/2000/svg'>
+                                                <a href="blog-2020-09-18.html" class="btn btn-clean mt-30 mt-lg-60 mt-xl-130 mb-xl-n30">read more<svg class="icon-arrow icon-arrow-right" width='26' height='11' viewBox='0 0 26 11' fill='none' xmlns='http://www.w3.org/2000/svg'>
                                                         <path d='M20.5 1L25 5.5L20.5 10' stroke='currentColor' stroke-width='1.3' stroke-linecap='round' stroke-linejoin='round' />
                                                         <path d='M7 5.5H25' stroke='currentColor' stroke-width='1.3' stroke-linecap='round' stroke-linejoin='round' />
                                                     </svg></a>
@@ -527,7 +537,7 @@
                             <div class="swiper-slide overflow-hidden">
                                 <div class="card card-overlay card-blog card-image-sm card-hover-zoom text-center text-white">
                                     <div class="card-img" data-swiper-parallax-x="20%" class="swiper-image">
-                                        <img src="assets/images/blog/31-oct-2021-adam-anna-wedding-party.jpg" alt="">
+                                        <img src="assets/images/blog/2021-10-31-adam-anna-wedding-party.jpg" alt="">
                                         <div class="background-color" style="background-color: rgba(14, 14, 14, .2);"></div>
                                     </div>
                                     <div class="card-img-overlay">
@@ -535,7 +545,7 @@
                                             <div class="col-12 col-lg-7">
                                                 <div class="subtitle mt-lg-3 mb-30">family - 31 oct 2021</div>
                                                 <h2 class="card-title h3-sm mb-0">Annalee and Adam get Married in Dallas!</h2>
-                                                <a href="blog-31-oct-2021.html" class="btn btn-clean mt-30 mt-lg-60 mt-xl-130 mb-xl-n30">read more<svg class="icon-arrow icon-arrow-right" width='26' height='11' viewBox='0 0 26 11' fill='none' xmlns='http://www.w3.org/2000/svg'>
+                                                <a href="blog-2021-10-31.html" class="btn btn-clean mt-30 mt-lg-60 mt-xl-130 mb-xl-n30">read more<svg class="icon-arrow icon-arrow-right" width='26' height='11' viewBox='0 0 26 11' fill='none' xmlns='http://www.w3.org/2000/svg'>
                                                         <path d='M20.5 1L25 5.5L20.5 10' stroke='currentColor' stroke-width='1.3' stroke-linecap='round' stroke-linejoin='round' />
                                                         <path d='M7 5.5H25' stroke='currentColor' stroke-width='1.3' stroke-linecap='round' stroke-linejoin='round' />
                                                     </svg></a>
@@ -591,14 +601,14 @@
                     <div class="row gh-1 gv-4 isotope-grid">
                         <div class="col-12 col-md-6 col-lg-4 isotope-item" data-filters="company">
                             <div class="card card-blog card-vertical">
-                                <a href="blog-18-sep-2020.html" class="card-img">
-                                    <img src="assets/images/blog/18-sep-2020-kens-retirement.jpg" alt="">
+                                <a href="blog-2020-09-18.html" class="card-img">
+                                    <img src="assets/images/blog/2020-09-18-kens-retirement.jpg" alt="">
                                 </a>
                                 <div class="card-body">
-                                    <a href="blog-18-sep-2020.html" class="card-title h5">23+ years, 30+ Plants</a>
+                                    <a href="blog-2020-09-18.html" class="card-title h5">23+ years, 30+ Plants</a>
                                     <div class="card-date">18 sept, 2020</div>
                                     <p class="card-text">A partial goodbye to one of the best guys I&#39;ve ever had to pleassure to work with.</p>
-                                    <a href="blog-18-sep-2020.html" class="btn btn-clean">read more<svg class='icon-arrow icon-arrow-right' width='25' height='10' viewBox='0 0 25 10' fill='none' xmlns='http://www.w3.org/2000/svg'>
+                                    <a href="blog-2020-09-18.html" class="btn btn-clean">read more<svg class='icon-arrow icon-arrow-right' width='25' height='10' viewBox='0 0 25 10' fill='none' xmlns='http://www.w3.org/2000/svg'>
                                             <path d='M20 1L24 5L20 9' stroke='currentColor' stroke-width='1.3' stroke-linecap='round' stroke-linejoin='round' />
                                             <path d='M7 5L24 5' stroke='currentColor' stroke-width='1.3' stroke-linecap='round' stroke-linejoin='round' />
                                         </svg></a>
@@ -607,14 +617,14 @@
                         </div>
                         <div class="col-12 col-md-6 col-lg-4 isotope-item" data-filters="sailing">
                             <div class="card card-blog card-vertical">
-                                <a href="blog-25-jul-2021.html" class="card-img">
-                                    <img src="assets/images/blog/25-jul-2021-best-day-racing.jpg" alt="">
+                                <a href="blog-2021-07-25.html" class="card-img">
+                                    <img src="assets/images/blog/2021-07-25-best-day-racing.jpg" alt="">
                                 </a>
                                 <div class="card-body">
-                                    <a href="blog-25-jul-2021.html" class="card-title h5">Winning Mackinac after 22 Attempts</a>
+                                    <a href="blog-2021-07-25.html" class="card-title h5">Winning Mackinac after 22 Attempts</a>
                                     <div class="card-date">25 july, 2021</div>
                                     <p class="card-text">A good boat, new sails, years of preparation, and great friends and family.</p>
-                                    <a href="blog-25-jul-2021.html" class="btn btn-clean">read more<svg class='icon-arrow icon-arrow-right' width='25' height='10' viewBox='0 0 25 10' fill='none' xmlns='http://www.w3.org/2000/svg'>
+                                    <a href="blog-2021-07-25.html" class="btn btn-clean">read more<svg class='icon-arrow icon-arrow-right' width='25' height='10' viewBox='0 0 25 10' fill='none' xmlns='http://www.w3.org/2000/svg'>
                                             <path d='M20 1L24 5L20 9' stroke='currentColor' stroke-width='1.3' stroke-linecap='round' stroke-linejoin='round' />
                                             <path d='M7 5L24 5' stroke='currentColor' stroke-width='1.3' stroke-linecap='round' stroke-linejoin='round' />
                                         </svg></a>
@@ -623,14 +633,14 @@
                         </div>
                         <div class="col-12 col-md-6 col-lg-4 isotope-item" data-filters="family">
                             <div class="card card-blog card-vertical">
-                                <a href="blog-31-oct-2021.html" class="card-img">
-                                    <img src="assets/images/blog/31-oct-2021-adam-anna-wedding-party.jpg" alt="">
+                                <a href="blog-2021-10-31.html" class="card-img">
+                                    <img src="assets/images/blog/2021-10-31-adam-anna-wedding-party.jpg" alt="">
                                 </a>
                                 <div class="card-body">
-                                    <a href="blog-31-oct-2021.html" class="card-title h5">Adam and Annalee get Married!</a>
+                                    <a href="blog-2021-10-31.html" class="card-title h5">Adam and Annalee get Married!</a>
                                     <div class="card-date">31 oct, 2021</div>
                                     <p class="card-text">A destination wedding for most of us, Dallas Texas here we come!.</p>
-                                    <a href="blog-31-oct-2021.html" class="btn btn-clean">read more<svg class='icon-arrow icon-arrow-right' width='25' height='10' viewBox='0 0 25 10' fill='none' xmlns='http://www.w3.org/2000/svg'>
+                                    <a href="blog-2021-10-31.html" class="btn btn-clean">read more<svg class='icon-arrow icon-arrow-right' width='25' height='10' viewBox='0 0 25 10' fill='none' xmlns='http://www.w3.org/2000/svg'>
                                             <path d='M20 1L24 5L20 9' stroke='currentColor' stroke-width='1.3' stroke-linecap='round' stroke-linejoin='round' />
                                             <path d='M7 5L24 5' stroke='currentColor' stroke-width='1.3' stroke-linecap='round' stroke-linejoin='round' />
                                         </svg></a>
