--- a/project-control-net.html
+++ b/project-control-net.html
@@ -203,6 +203,11 @@
                                         <span class="nav-link-name">work</span>
                                     </a>
                                 </li>
+                                <li class="nav-item">
+                                    <a href="my-blog.html" class="nav-link">
+                                        <span class="nav-link-name">blog</span>
+                                    </a>
+                                </li>
                             </ul>
                         </div>
                     </li>
@@ -351,6 +356,11 @@
                                             <li class="nav-item">
                                                 <a href="project-microcode.html" class="nav-link">
                                                     <span class="nav-link-name">work</span>
+                                                </a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a href="my-blog.html" class="nav-link">
+                                                    <span class="nav-link-name">blog</span>
                                                 </a>
                                             </li>
                                         </ul>
@@ -539,7 +549,7 @@
                 </div>
                 <div class="row gv-3 align-items-center mb-100 mb-lg-0">
                     <div class="col-12 col-lg-6 show-on-scroll" data-show-duration="500" data-show-distance="20" data-show-origin="left" data-show-delay="250">
-                        <a href="assets/images/microcode/control-epp-app.jpg" class="gallery-item gallery-item-lg" data-fancybox="gallery-1" data-animation-effect="fade">
+                        <a href="assets/images/microcode/control-epp-app.png" class="gallery-item gallery-item-lg" data-fancybox="gallery-1" data-animation-effect="fade">
                             <img src="assets/images/microcode/control-epp-app.png" alt="">
                         </a>
                     </div>
