--- a/project-microcode.html
+++ b/project-microcode.html
@@ -203,6 +203,11 @@
                                         <span class="nav-link-name">work</span>
                                     </a>
                                 </li>
+                                <li class="nav-item">
+                                    <a href="my-blog.html" class="nav-link">
+                                        <span class="nav-link-name">blog</span>
+                                    </a>
+                                </li>
                             </ul>
                         </div>
                     </li>
@@ -351,6 +356,11 @@
                                             <li class="nav-item active">
                                                 <a href="project-microcode.html" class="nav-link">
                                                     <span class="nav-link-name">work</span>
+                                                </a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a href="my-blog.html" class="nav-link">
+                                                    <span class="nav-link-name">blog</span>
                                                 </a>
                                             </li>
                                         </ul>
