--- a/blog-2021-07-25.html
+++ b/blog-2021-07-25.html
@@ -66,7 +66,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>tjmcode | 18-SEP-2020</title>
+        <title>tjmcode | 25-JUL-2021</title>
         <meta name="My Portfolio" content="Timothy McGuire">
         <meta name="Timothy McGuire" content="Portfolio">
         <!-- Browser Tab Icon -->
@@ -201,6 +201,11 @@
                                 <li class="nav-item">
                                     <a href="project-microcode.html" class="nav-link">
                                         <span class="nav-link-name">work</span>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="my-blog.html" class="nav-link">
+                                        <span class="nav-link-name">blog</span>
                                     </a>
                                 </li>
                             </ul>
@@ -353,6 +358,11 @@
                                                     <span class="nav-link-name">work</span>
                                                 </a>
                                             </li>
+                                            <li class="nav-item">
+                                                <a href="my-blog.html" class="nav-link">
+                                                    <span class="nav-link-name">blog</span>
+                                                </a>
+                                            </li>
                                         </ul>
                                     </div>
                                 </li>
@@ -483,52 +493,52 @@
             <div class="container">
                 <div class="row justify-content-center text-center pt-60 pb-130 mt-30">
                     <div class="col-12 col-lg-8">
-                        <div class="subtitle show-on-scroll" data-show-duration="500" data-show-distance="10" data-show-delay="150">family - 31 oct, 2021</div>
-                        <h1 class="h2 mb-n10 show-on-scroll" data-show-duration="500" data-show-distance="10">Adam and Annalee get Married!</h1>
+                        <div class="subtitle show-on-scroll" data-show-duration="500" data-show-distance="10" data-show-delay="150">sailing - 25 july, 2021</div>
+                        <h1 class="h2 mb-n10 show-on-scroll" data-show-duration="500" data-show-distance="10">How do you win a Mackinac Race?</h1>
                     </div>
                 </div>
-                <img class="w-100 mb-100 show-on-scroll" src="assets/images/blog/31-oct-2021-adam-anna-wedding-party.jpg" alt="" data-show-duration="800">
+                <img class="w-100 mb-100 show-on-scroll" src="assets/images/blog/2021-07-25-me-cathy-flags.jpg" alt="" data-show-duration="800">
                 <div class="row justify-content-center gh-1 mb-100">
                     <div class="col-lg-8 post-content">
-                        <p class="lead fw-medium">A virtual relationship made reality.</p>
-                        <p>They made online enjoying VR games and became close friends, and then more. After a trip from Arizona to Arlington Texas they knew it was much more, forever more. </p>
-                        <p>Cathy and I are so happy that Adam has found his life-partner!.</p>
+                        <p class="lead fw-medium">This was our third Bayview Port Huron to Mackinac Race in our new J/112e.</p>
+                        <p>Together again with friends and family who have raced with us for over 20 years, it is always a lot of fun, win or lose. Our crew this year was: Tim McGuire, Damian McGuire, Brian Smith, Steve Temple, Kevin Meiselbach, Rob Fleming, Dan Rylance, Cameron Rylance, and Tim Thompson. </p>
+                        <p>Cathy and I have never had a better over-all crew for any Mackinac Race.</p>
                     </div>
                 </div>
                 <div class="row gh-1 gv-1 mb-100">
                     <div class="col-12 col-sm-6 show-on-scroll" data-show-duration="500" data-show-delay="50">
-                        <a href="assets/images/blog/31-oct-2021-wedding-party-photo2.jpg" class="gallery-item gallery-item-lg" data-fancybox="gallery-1" data-animation-effect="fade">
-                            <img src="assets/images/blog/31-oct-2021-wedding-party-photo2.jpg" alt="">
+                        <a href="assets/images/blog/2021-07-25-we-actually-won.jpg" class="gallery-item gallery-item-lg" data-fancybox="gallery-1" data-animation-effect="fade">
+                            <img src="assets/images/blog/2021-07-25-we-actually-won.jpg" alt="">
                         </a>
                     </div>
                     <div class="col-12 col-sm-6 show-on-scroll" data-show-duration="500" data-show-delay="150">
-                        <a href="assets/images/blog/31-oct-2021-wedding-me-cathy.jpg" class="gallery-item gallery-item-lg" data-fancybox="gallery-1" data-animation-effect="fade">
-                            <img src="assets/images/blog/31-oct-2021-wedding-me-cathy.jpg" alt="">
+                        <a href="assets/images/blog/2021-07-25-let-the-party-start-now.jpg" class="gallery-item gallery-item-lg" data-fancybox="gallery-1" data-animation-effect="fade">
+                            <img src="assets/images/blog/2021-07-25-let-the-party-start-now.jpg" alt="">
                         </a>
                     </div>
                 </div>
                 <div class="row justify-content-center gh-1 mb-100">
                     <div class="col-lg-8 post-content">
-                        <h3>Annalee Byas and Adam McGuire</h3>
-                        <p>We had a wonderful stay at the Hilton Statler hotel, just around the corner from the art deco reception hall. </p>
-                        <h4>October 31, 2021 Weekend - Hilton Statler Dallas Texas</h4>
-                        <p>There was a wonderful rehearsal dinner and party in the Statler Hotel's game room resturant. The little kids had plenty to do: a Bowling Alley, Video Games, Basket Ball Hoops, too much fun.
+                        <h3>Tough Competition, makes Better Racing.</h3>
+                        <p>We raced the Shore Course this year because of Canadian COVID-19 restrictions, the same course we've raced many years in our Hughes 35. We were placed in Class D with a Melges 32, two C&C 115s, three J/109s, a J/130, and four 1D35s. </p>
+                        <h4>Are we winning?</h4>
+                        <p>With Yellow Brick tracking everyone ashore and onbaord—most of the time—can follow the race and keep track of our competition. The J/109 CONSIG made it a nail-biter right to the last minute. When we finished we weren't sure for hours that she wouldn't take our time with their ORC rating handicap. It was an amazing moment I will never forget when we realized she was too far behind and the wind was dying, there was no way she could take our time, and we knew we had the time of all the boats ahead of us... we had won our first Mackinac! </p>
                     </div>
                 </div>
                 <div class="row gh-1 gv-1 mb-100">
                     <div class="col-12 col-sm-6 col-md-4 show-on-scroll" data-show-duration="500" data-show-delay="50">
-                        <a href="assets/images/blog/31-oct-2021-adam-anna-bubbles.jpg" class="gallery-item gallery-item-lg" data-fancybox="gallery-2" data-animation-effect="fade">
-                            <img src="assets/images/blog/31-oct-2021-adam-anna-bubbles.jpg" alt="">
+                        <a href="assets/images/blog/2021-07-25-the-land-crew-ladies.jpg" class="gallery-item gallery-item-lg" data-fancybox="gallery-2" data-animation-effect="fade">
+                            <img src="assets/images/blog/2021-07-25-the-land-crew-ladies.jpg" alt="">
                         </a>
                     </div>
                     <div class="col-12 col-sm-6 col-md-4 show-on-scroll" data-show-duration="500" data-show-delay="250">
-                        <a href="assets/images/blog/31-oct-2021-wedding-mr-and-mrs.jpg" class="gallery-item gallery-item-lg" data-fancybox="gallery-2" data-animation-effect="fade">
-                            <img src="assets/images/blog/31-oct-2021-wedding-mr-and-mrs.jpg" alt="">
+                        <a href="assets/images/blog/2021-07-25-corinthian-flag.jpg" class="gallery-item gallery-item-lg" data-fancybox="gallery-2" data-animation-effect="fade">
+                            <img src="assets/images/blog/2021-07-25-corinthian-flag.jpg" alt="">
                         </a>
                     </div>
                     <div class="col-12 col-sm-6 col-md-4 show-on-scroll" data-show-duration="500" data-show-delay="150">
-                        <a href="assets/images/blog/31-oct-2021-anna-cutting-cake.jpg" class="gallery-item gallery-item-lg" data-fancybox="gallery-2" data-animation-effect="fade">
-                            <img src="assets/images/blog/31-oct-2021-anna-cutting-cake.jpg" alt="">
+                        <a href="assets/images/blog/2021-07-25-class-d-flag.jpg" class="gallery-item gallery-item-lg" data-fancybox="gallery-2" data-animation-effect="fade">
+                            <img src="assets/images/blog/2021-07-25-class-d-flag.jpg" alt="">
                         </a>
                     </div>
                 </div>
@@ -537,13 +547,13 @@
                         <svg class="mb-30" width="38" height="24" viewBox="0 0 38 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M0 24L10.1466 0H18.801L13.4293 24H0ZM19.199 24L29.3455 0H38L32.5288 24H19.199Z" fill="currentColor" />
                         </svg>
-                        <blockquote class="mt-6 mb-100">Congratulations to Annalee and Adam, Mr. & Mrs. McGuire!</blockquote>
+                        <blockquote class="mt-6 mb-100">22 attempts, 9 different boats, no 1st, 2nd, or 3rd place flags until 2021 in our new J/112e... it was worth the wait!</blockquote>
                     </div>
                     <div class="col-12 col-lg-8">
                         <hr class="mt-n10 mb-30">
                         <div class="row gh-2 gv-1 justify-content-between">
                             <div class="col-auto">
-                                <span class="fw-medium me-8">Tags:</span> <a href="#">family</a>, <a href="#">dallas</a>, <a href="#">wedding</a>
+                                <span class="fw-medium me-8">Tags:</span> <a href="#">sailing</a>, <a href="#">mackinac</a>, <a href="#">J/112e</a>
                             </div>
                             <div class="col-auto">
                                 <span class="fw-medium">Share:</span>
@@ -577,13 +587,13 @@
                 <h2 class="text-center mt-130 pb-30 mb-60">Related posts</h2>
                 <div class="row gh-1 gv-1 mb-n8">
                     <div class="col-12 col-md-6 col-lg-4 show-on-scroll" data-show-duration="600" data-show-distance="20" data-show-delay="50">
-                        <a class="card card-blog card-vertical" href="blog-31-oct-2021.html">
+                        <a class="card card-blog card-vertical" href="blog-2021-07-25.html">
                             <span class="card-img">
-                                <img src="assets/images/blog/31-oct-2021-adam-anna-wedding-party.jpg" alt="">
+                                <img src="assets/images/blog/2021-07-25-best-day-racing.jpg" alt="">
                             </span>
                             <span class="card-body">
-                                <span class="card-title h5">Adam and Annalee get Married!</span>
-                                <span class="card-date">31 oct, 2021</span>
+                                <span class="card-title h5">Winning Mackinac after 22 Attempts</span>
+                                <span class="card-date">25 july, 2021</span>
                             </span>
                         </a>
                     </div>
