--- a/my-family.html
+++ b/my-family.html
@@ -203,6 +203,11 @@
                                         <span class="nav-link-name">work</span>
                                     </a>
                                 </li>
+                                <li class="nav-item">
+                                    <a href="my-blog.html" class="nav-link">
+                                        <span class="nav-link-name">blog</span>
+                                    </a>
+                                </li>
                             </ul>
                         </div>
                     </li>
@@ -351,6 +356,11 @@
                                             <li class="nav-item">
                                                 <a href="project-microcode.html" class="nav-link">
                                                     <span class="nav-link-name">work</span>
+                                                </a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a href="my-blog.html" class="nav-link">
+                                                    <span class="nav-link-name">blog</span>
                                                 </a>
                                             </li>
                                         </ul>
@@ -507,7 +517,7 @@
                     <div class="row gv-3 justify-content-center">
                         <div class="col-12 col-lg-7 text-center">
                             <h2 class="h3 mb-30 pb-10 mt-n10 show-on-scroll" data-show-duration="500" data-show-distance="10">About us</h2>
-                            <p class="mb-0 show-on-scroll" data-show-duration="500" data-show-distance="10" data-show-delay="150">All of us were born and raised on Detroit's East Side, near Lake St. Clair for sailing. I am one of five siblings: Tim, Bill, Damian, Leo, and Lisa, all of us sailors at some point in our lives. Our parents Frank and Sonja McGuire raised us on boats. My three kids Adam, Nikki, and Laura have all done Mackinac's with me. And sailing—along with a major boat repair—is how I met my wife Cathy (Fox).</p>
+                            <p class="mb-0 show-on-scroll" data-show-duration="500" data-show-distance="10" data-show-delay="150">All of us were born and raised on Detroit's East Side, near Lake St. Clair for sailing. I am one of five siblings: Tim, Bill, Damian, Leo, and Lisa, all of us sailors at some point in our lives. Our parents Frank and Sonja McGuire raised us on boats. My three kids Adam, Nikki, and Laura have all done Mackinac Races with me. And sailing—along with a major boat repair—is how I met my wife Cathy (Fox).</p>
                         </div>
                         <div class="col-12 col-lg-10 show-on-scroll" data-show-duration="500" data-show-distance="10" data-show-delay="300">
                             <hr class="mt-0 mb-30">
