--- a/project-gm-xep.html
+++ b/project-gm-xep.html
@@ -203,6 +203,11 @@
                                         <span class="nav-link-name">work</span>
                                     </a>
                                 </li>
+                                <li class="nav-item">
+                                    <a href="my-blog.html" class="nav-link">
+                                        <span class="nav-link-name">blog</span>
+                                    </a>
+                                </li>
                             </ul>
                         </div>
                     </li>
@@ -351,6 +356,11 @@
                                             <li class="nav-item">
                                                 <a href="project-microcode.html" class="nav-link">
                                                     <span class="nav-link-name">work</span>
+                                                </a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a href="my-blog.html" class="nav-link">
+                                                    <span class="nav-link-name">blog</span>
                                                 </a>
                                             </li>
                                         </ul>
@@ -518,7 +528,7 @@
                     <div class="d-none d-lg-block col-1 order-lg-2"></div>
                     <div class="col-12 col-lg-5 lead order-lg-0 show-on-scroll" data-show-duration="500" data-show-distance="20" data-show-origin="left" data-show-delay="50">
                         <h2>GM GEP</h2>
-                        <p>General Motors Global Error Proofing (GEP). An extension of the original COSS program and a direct upgrade of the Server, SQL Database, and PLC Code. This project was a joint jenture between IBM, Rockwell Automation, and MicroCODE.</p>
+                        <p>General Motors Global Error Proofing (GEP). An extension of the original COSS program and a direct upgrade of the Server, SQL Database, and PLC Code, and the addition of a Web Front-End and OPC Data Collector. This project was a joint jenture between IBM, Rockwell Automation, and MicroCODE.</p>
                         <hr>
                         <div class="row gh-1 gv-1">
                             <div class="col-auto col-sm-6">
